ITStepWorks/Example_CS_CPP_dll/MyLibraryCPP/pch.h

// pch.h: This is a precompiled header file.
// Files listed below are compiled only once, improving build performance for future builds.
// This also affects IntelliSense performance, including code completion and many code browsing features.
// However, files listed here are ALL re-compiled if any one of them is updated between builds.
// Do not add files here that you will be updating frequently as this negates the performance advantage.

#ifndef PCH_H
#define PCH_H

// add headers that you want to pre-compile here
#include "framework.h"
#include <iostream>
typedef struct MyStruct;
extern "C" __declspec(dllexport) void Test(char* str);
extern "C" __declspec(dllexport) int __stdcall demo_plus(int x, int y);
extern "C" __declspec(dllexport) int __stdcall demo_struct(MyStruct& s);
#endif //PCH_H